# HtopRust

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  build.rs  check_output.txt  deny.toml  deny_log.txt  failed_log.txt  htop_run.json  resources.rc
.github/workflows/: codeql.yml  deny.yml  nightly.yml  osv-scanner.yml  release.yml  rust.yml  typos.yml  zizmor.yml
locales/: en.yml  fr.yml
src/: events.rs  main.rs  system.rs  theme.rs  wifi.rs
